--- a/src/public/css/style.css
+++ b/src/public/css/style.css
@@ -112,16 +112,16 @@ footer a:hover {
 
 
 /* Scrollbar */
-body::-webkit-scrollbar {
+*::-webkit-scrollbar {
   width: 16px;
   background-color: #222;
 }
 
-body::-webkit-scrollbar-track {
+*::-webkit-scrollbar-track {
   border-radius: 8px;
 }
 
-body::-webkit-scrollbar-thumb {
+*::-webkit-scrollbar-thumb {
   height: 56px;
   border-radius: 8px;
   border: 4px solid transparent;
@@ -129,6 +129,6 @@ body::-webkit-scrollbar-thumb {
   background-color: #888;
 }
 
-body::-webkit-scrollbar-thumb:hover {
+*::-webkit-scrollbar-thumb:hover {
   background-color: #7e7e7e;
 }
